# Event_Management

./: .gitignore  README.md  main.py  pyproject.toml
Event_Management/Event_Management/: settings.py  urls.py
Event_Management/api/: admin.py  models.py  serializer.py  testing_script.py  tests.py  urls.py  views.py
Event_Management/api/migrations/: 0001_initial.py  0002_event_invited.py
