[project]
name = "717675e2dc6fbb66084fdb7ead94e27d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-jwt>=1.11.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
